[project]
name = "asteroids"
version = "0.1.0"
description = "An Asteroids-style arcade game built with Pygame"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pygame==2.6.1",
]

[dependency-groups]
dev = [
    "ruff==0.15.21",
]

[tool.ruff]
target-version = "py313"
exclude = [".venv"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP", "B", "SIM"]
